# mkw-replay

./: .gitignore  1324.rkg  1804.rkg  842.rkg  CMakeLists.txt  GV_CTGP.rkg  MG_CTGP.rkg  README.md
.github/workflows/: cmake-firmware.yml
include/: GCPadStatus.hpp  RKGReader.hpp
src/: RKGReader.cpp  file.S  main.cpp
